syntax = "proto3";

package sf.solana.spl.v1;

message Arg {
  string instruction_type = 1;
  uint64 amount = 2;
  string authority_type = 3;
  string freeze_authority = 4;
  int32 freeze_authority_option = 5;
  string mint_authority = 6;
  string new_authority = 7;
  int32 new_authority_option = 8;
  string owner = 9;
  int32 decimals = 10;
  int32 extension_type = 11;
  string ui_amount = 12;
  int32 status = 13;
}

message SplTokenMeta {
  string block_date = 1;
  int64 block_time = 2;
  string tx_id = 3;
  string dapp = 4;
  uint64 block_slot = 5;
  uint32 instruction_index = 7;
  bool is_inner_instruction = 8;
  uint32 inner_instruction_index = 9;
  Arg arg = 10;
}

message Output {
  repeated SplTokenMeta data = 1;
}